# BuildXvibe

./: README.md  compose.yaml
Backend/: main.py  pyproject.toml  requirements.txt
Backend/config/: __init__.py
Backend/core/: api.py  build.py  db.py  e2b_runner.py  exceptions.py  template.py
Backend/routers/: api.py
buildxvibe/: package.json  pnpm-lock.yaml
buildxvibe/src/app/: layout.tsx  page.tsx
buildxvibe/src/app/lib/: auth.ts
buildxvibe/src/app/signin/: page.tsx
buildxvibe/src/components/: GradientBlinds.tsx  globals.css  inputbox.tsx  navbar.tsx  providers.tsx  signin.tsx  signup-form.tsx
buildxvibe/src/components/ui/: placeholders-and-vanish-input.tsx
